# AltTabFix

./: .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: XSEPlugin.cmake
distribution/Bundle/: AltTabFix.ini
src/: Fixes.cpp  Fixes.hpp  Hook.hpp  HookUtil.hpp  PCH.hpp  XSEPlugin.cpp
src/Config/: Config.cpp  Config.hpp
src/Hooks/: AltTabFix.hpp  FocusTheft.hpp  Hooks.hpp  SnippingTool.hpp
src/Util/Logger/: Logger.cpp
